# Sudo-Ku

./: readme.md  sudo-ku.cabal
app/: Main.hs
src/: Board.hs  Builder.hs  Solver.hs  hshuffle.hs
tests/: Tests.hs
