name:                sudo-ku
version:             0.1.0.0
synopsis:            Sudoku solver
description:         Please see README.md
homepage:            https://github.com/jkiely/sudo-ku#readme
license:             BSD3
license-file:        LICENSE
author:              J Kiely
maintainer:          
copyright:           2016 J Kiely
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Builder
                       Solver            
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable sudo-ku-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , sudo-ku
  default-language:    Haskell2010

test-suite tests
  ghc-options:         -Wall
  type:                exitcode-stdio-1.0
  main-is:             Tests.hs
  hs-source-dirs:      tests
  build-depends:       base,
                       sudo-ku,
                       hspec
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/jkiely/sudo-ku
